--- a/src/Mod/Path/Gui/Resources/Path.qrc
+++ b/src/Mod/Path/Gui/Resources/Path.qrc
@@ -51,6 +51,7 @@
         <file>icons/Path_Profile_Edges.svg</file>
         <file>icons/Path_Profile_Face.svg</file>
         <file>icons/Path_Profile.svg</file>
+		<file>icons/Path_Rotate.svg</file>
         <file>icons/Path_Sanity.svg</file>
         <file>icons/Path_SelectLoop.svg</file>
         <file>icons/Path_SetupSheet.svg</file>
